[package]
name = "gl_quadrature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
approx = "0.5.1"

[dependencies]
rayon = {version = "1.7", optional = true}

[features]
parallel = ["dep:rayon"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]