[package]
name = "gl_quadrature"
version = "0.1.0"
edition = "2021"
description = "Numerical integration with Gauss-Legendre quadrature"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
approx = "0.5.1"

[dependencies]
rayon = {version = "1.7", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}

[features]
## Enables parallel version of many routines
parallel = ["dep:rayon"]
## Enables serialization and deserialization of the structs in the crate
serde_support = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]